infrastructure/production/k8s/services/email.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email
  namespace: go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email
  template:
    metadata:
      labels:
        app: email
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: email
          image: email:latest
          imagePullPolicy: Never
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 15"]
