infrastructure/production/k8s/services/email-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-api
  namespace: go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-api
  template:
    metadata:
      labels:
        app: email-api
    spec:
      containers:
        - name: email-api
          image: email:latest
          imagePullPolicy: Never
          command: ["./bin/api"]
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: email-api
  namespace: go-app
spec:
  selector:
    app: email-api
  ports:
    - port: 8081
      targetPort: 8081
