infrastructure/production/k8s/services/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress-public
  namespace: go-app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8080
          - path: /api/stress
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8080
